# fanroots

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  bench_div_vols.py  bench_scaling.py  bench_volume_finder.py  data.py  prior_method.py  scaling_data.py  scaling_results.json
demo/: volume_finder.py
documentation/source/: conf.py  fanroots.demo.rst  fanroots.rst  fanroots.step_proposal.rst  fanroots.step_size.rst  fanroots.step_taking.rst  index.rst  tutorials.rst
documentation/source/_autosummary/: fanroots.BatchOptimizer.rst  fanroots.FanRoots.rst  fanroots.demo.volume_finder.VolumeFinder.rst  fanroots.demo.volume_finder.fct.rst  fanroots.demo.volume_finder.jac.rst  fanroots.fanroots_from_state.rst  fanroots.step_proposal.lma.lma.rst  fanroots.step_proposal.lma.lma_idk.rst  fanroots.step_proposal.propose_gauss_newton.rst  fanroots.step_proposal.propose_gradient_descent.rst  fanroots.step_proposal.propose_lma.rst  fanroots.step_proposal.propose_newton.rst  fanroots.step_size.backtracking_line_search.rst  fanroots.step_size.naive_scaling.rst  fanroots.step_size.shrink.rst  fanroots.step_size.ternary.rst  fanroots.step_size.ternary_raw.rst  fanroots.step_taking.FlopStep.rst  fanroots.step_taking.JumpStep.rst
documentation/source/_static/css/: fanroots-figures.css
documentation/source/_static/figures/: f1_workflow.html  f2_architecture.html  f3_step_proposal.html  f4_step_size.html  f5_step_taking.html
documentation/source/intro/: algorithm.md  index.md  secondary_fan.md
documentation/source/notebooks/: 01_volume_finder.ipynb
fanroots/: __init__.py  fan_optimizer.py  fanroots.py  lrs.py
fanroots/applications/: volume_finder.py
fanroots/demo/: volume_finder.py
fanroots/step_proposal/: README  __init__.py  gauss_newton.py  gradient_descent.py  lma.py  newton.py
fanroots/step_size/: __init__.py  backtracking_line_search.py  naive.py  shrink.py  ternary.py
fanroots/step_taking/: README  __init__.py  flop.py  jump.py
tests/: test_div_vols_kernel.py  test_fanroots_api.py  test_step_methods.py  test_volume_finder.py
