[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fanroots"
version = "0.1.0"
description = "Root-finding and optimization on polyhedral fans"
authors = [{ name = "Nate MacFadden" }]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["polyhedral fan", "optimization", "Calabi-Yau", "root-finding", "secondary fan"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
    "joblib",
    "plotly",
    "cytools>=1.4.7",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]
dev = ["mypy"]

[project.urls]
Repository = "https://github.com/LiamMcAllisterGroup/fanroots"

[tool.setuptools.packages.find]
include = ["fanroots*"]

[tool.setuptools.package-data]
fanroots = ["py.typed"]

[tool.mypy]
# cytools and its dependency stack ship no type stubs
ignore_missing_imports = true
# accept `param: T = None` signatures without an explicit Optional[...]
implicit_optional = true
